DBZ-4949 Use Java 11 as a baseline (#69)
* use Java 11 as a baseline for Debezium
* use Java 17 as a baseline for tests
* remove redundant maven setup and JDK11 profile

Validated in QA https://amp.qa.corp.stripe.com/deploy/qa-deploy1.pdx.deploy.stripe.net%2Fdeploy_quAXx6FNSreDITgAfb0XlQ

(Squashed by Merge Queue - Original PR: https://git.corp.stripe.com/stripe-private-oss-forks/debezium/pull/69)